// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog Footer renders different Sizes 1`] = `
<div
  className="flex flex-col"
>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-futMm cjTPPc"
    >
      <div
        className="sc-iDRUQT jyulmh"
      >
        <div
          className="sc-eqKtKx HrUgt"
        >
          <button
            className="sc-jmhOSl eXuqpb"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-dYtREw KOYqG"
            />
          </button>
        </div>
        <div
          className="sc-eqKtKx HrUgt"
        >
          <button
            className="sc-jmhOSl iZVeg"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-dYtREw KOYqG"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-eqKtKx HrUgt"
      >
        <button
          className="sc-jmhOSl dVoRdy"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Button
          <div
            className="sc-dYtREw KOYqG"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-futMm ebqvyw"
      size="small"
    >
      <div
        className="sc-iDRUQT jyulmh"
      >
        <div
          className="sc-eqKtKx HrUgt"
        >
          <button
            className="sc-jmhOSl ffAOWa"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-dYtREw KOYqG"
            />
          </button>
        </div>
        <div
          className="sc-eqKtKx HrUgt"
        >
          <button
            className="sc-jmhOSl SDgcJ"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-dYtREw KOYqG"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-eqKtKx HrUgt"
      >
        <button
          className="sc-jmhOSl cEyVmP"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="small"
        >
          Button
          <div
            className="sc-dYtREw KOYqG"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dialog Footer renders with Button MD 1`] = `
<div
  className="flex flex-col"
>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-futMm kHcsNe"
    >
      <div
        className="sc-iDRUQT jyulmh"
      >
        <div
          className="sc-eqKtKx HrUgt"
        >
          <button
            className="sc-jmhOSl eXuqpb"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-dYtREw KOYqG"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-futMm kHcsNe"
    >
      <div
        className="sc-iDRUQT jyulmh"
      >
        <div
          className="sc-eqKtKx HrUgt"
        >
          <button
            className="sc-jmhOSl eXuqpb"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-dYtREw KOYqG"
            />
          </button>
        </div>
        <div
          className="sc-eqKtKx HrUgt"
        >
          <button
            className="sc-jmhOSl iZVeg"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-dYtREw KOYqG"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-futMm kHcsNe"
    >
      <div
        className="sc-iDRUQT jyulmh"
      >
        <div
          className="sc-eqKtKx HrUgt"
        >
          <button
            className="sc-jmhOSl eXuqpb"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-dYtREw KOYqG"
            />
          </button>
        </div>
        <div
          className="sc-eqKtKx HrUgt"
        >
          <button
            className="sc-jmhOSl iZVeg"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-dYtREw KOYqG"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-eqKtKx HrUgt"
      >
        <button
          className="sc-jmhOSl dVoRdy"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Button
          <div
            className="sc-dYtREw KOYqG"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-futMm kHcsNe"
    >
      <div
        className="sc-iDRUQT jyulmh"
      >
        <div
          className="sc-eqKtKx HrUgt"
        >
          <button
            className="sc-jmhOSl eXuqpb"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-dYtREw KOYqG"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-eqKtKx HrUgt"
      >
        <button
          className="sc-jmhOSl dVoRdy"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Button
          <div
            className="sc-dYtREw KOYqG"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-futMm kHcsNe"
    >
      <div
        className="sc-iDRUQT jyulmh"
      >
        <div
          className="sc-eqKtKx HrUgt"
        >
          <button
            className="sc-jmhOSl iZVeg"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-dYtREw KOYqG"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-futMm kHcsNe"
    >
      <div
        className="sc-iDRUQT jyulmh"
      >
        <div
          className="sc-eqKtKx HrUgt"
        >
          <button
            className="sc-jmhOSl iZVeg"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-dYtREw KOYqG"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-eqKtKx HrUgt"
      >
        <button
          className="sc-jmhOSl dVoRdy"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Button
          <div
            className="sc-dYtREw KOYqG"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-full max-w-screen-sm mb-4"
  />
</div>
`;

exports[`Dialog Footer renders with Button SM 1`] = `
<div
  className="flex flex-col"
>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-futMm kHcsNe"
    >
      <div
        className="sc-iDRUQT jyulmh"
      >
        <div
          className="sc-eqKtKx HrUgt"
        >
          <button
            className="sc-jmhOSl ffAOWa"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-dYtREw KOYqG"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-futMm kHcsNe"
    >
      <div
        className="sc-iDRUQT jyulmh"
      >
        <div
          className="sc-eqKtKx HrUgt"
        >
          <button
            className="sc-jmhOSl ffAOWa"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-dYtREw KOYqG"
            />
          </button>
        </div>
        <div
          className="sc-eqKtKx HrUgt"
        >
          <button
            className="sc-jmhOSl SDgcJ"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-dYtREw KOYqG"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-futMm kHcsNe"
    >
      <div
        className="sc-iDRUQT jyulmh"
      >
        <div
          className="sc-eqKtKx HrUgt"
        >
          <button
            className="sc-jmhOSl ffAOWa"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-dYtREw KOYqG"
            />
          </button>
        </div>
        <div
          className="sc-eqKtKx HrUgt"
        >
          <button
            className="sc-jmhOSl SDgcJ"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-dYtREw KOYqG"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-eqKtKx HrUgt"
      >
        <button
          className="sc-jmhOSl cEyVmP"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="small"
        >
          Button
          <div
            className="sc-dYtREw KOYqG"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-futMm kHcsNe"
    >
      <div
        className="sc-iDRUQT jyulmh"
      >
        <div
          className="sc-eqKtKx HrUgt"
        >
          <button
            className="sc-jmhOSl ffAOWa"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-dYtREw KOYqG"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-eqKtKx HrUgt"
      >
        <button
          className="sc-jmhOSl cEyVmP"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="small"
        >
          Button
          <div
            className="sc-dYtREw KOYqG"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-futMm kHcsNe"
    >
      <div
        className="sc-iDRUQT jyulmh"
      >
        <div
          className="sc-eqKtKx HrUgt"
        >
          <button
            className="sc-jmhOSl SDgcJ"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-dYtREw KOYqG"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-futMm kHcsNe"
    >
      <div
        className="sc-iDRUQT jyulmh"
      >
        <div
          className="sc-eqKtKx HrUgt"
        >
          <button
            className="sc-jmhOSl SDgcJ"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-dYtREw KOYqG"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-eqKtKx HrUgt"
      >
        <button
          className="sc-jmhOSl cEyVmP"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="small"
        >
          Button
          <div
            className="sc-dYtREw KOYqG"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-full max-w-screen-sm mb-4"
  />
</div>
`;
